Fix mobile drawer collapsed state

--- a/cloud_site/assets/cloud.css
+++ b/cloud_site/assets/cloud.css
@@ -682,6 +682,10 @@ body {
     margin: 0 0 8px 34px;
   }
 
+  .study-drawer-problems[hidden] {
+    display: none !important;
+  }
+
   .study-drawer-problem-link {
     display: inline-flex;
     min-height: 30px;
